# Projet_Portfolio

./: .gitignore  Roadmap.md  create_project.sh
backup/V.0.0.1/backend/: Dockerfile  pyproject.toml
backup/V.0.0.1/backend/app/: main.py
backup/V.0.0.1/backend/app/core/: settings.py
backup/V.0.0.1/backend/app/services/: telescope_service.py
stellar-studio/backend/: Dockerfile  Dockerfile.celery  celery-entrypoint.sh  docker-entrypoint.sh  pyproject.toml  pytest.ini
stellar-studio/backend/app/: main.py
stellar-studio/backend/app/api/: deps.py
stellar-studio/backend/app/api/v1/: router.py
stellar-studio/backend/app/core/: cache.py  celery.py  config.py  monitoring.py  redis.py  security.py  session.py  tasks.py
stellar-studio/backend/app/core/ws/: events.py  manager.py
stellar-studio/backend/app/db/: base.py  base_class.py  init_db.py  session.py
stellar-studio/backend/app/domain/: __init__.py
stellar-studio/backend/app/domain/models/: __init__.py  filter.py  observation.py  preset.py  preset_filter.py  preset_target_file.py  processing.py  target.py  target_file.py  target_preset.py  task.py  telescope.py  user.py  workflow.py
stellar-studio/backend/app/domain/value_objects/: __init__.py  coordinates.py  filter_types.py  observation_types.py  processing_types.py  target_types.py  task_types.py  telescope_types.py  user_types.py
stellar-studio/backend/app/infrastructure/repositories/: base_repository.py  filter_repository.py  (+11 more)
stellar-studio/backend/app/models/: __init__.py  telescope.py  user.py  workflow.py
stellar-studio/backend/app/schemas/: auth.py  filter.py  observation.py  preset.py  preset_filter.py  preset_target_file.py  processing.py  target.py  target_file.py  target_preset.py  task.py  telescope.py  user.py  workflow.py
stellar-studio/backend/app/services/: auth_service.py  catalog_service.py  minio_service.py  mosaic_service.py  observation_service.py  task_manager.py  telescope_service.py  test_mast.py
stellar-studio/backend/app/tasks/: download.py  processing.py
stellar-studio/backend/app/utils/: filter.py  filtered_cleaned_data.json
stellar-studio/backend/migrations/: env.py
stellar-studio/backend/migrations/versions/: 0b9fc42f03a3_refonte_architecture_stellar.py  0ba070c6aab8_add_user_role.py  39c741af8450_add_user_role_enum.py  86dc0947d88d_initial_migration.py  9851234371a3_add_user_validations.py  a8c2204c1c59_add_user_role.py  b21176e3f8ec_not_nullabe_level_field.py  c31176e3f9ec_add_m16_update_existing_targets.py  c4ad3ddefcfc_add_user_password_field.py  cb10e697344c_rebuild_user_model.py  f81a501e18a6_add_user_role_enum.py  f9d70004867e_initial_migration.py  xxx_seed_initial_data.py
stellar-studio/backend/scripts/: cleaned_data.json  cleanup.py  collect_uris.py  create_admin.py  migrate_targets.py  migrate_telescopes.py  target_uris.json  test_mast.py
stellar-studio/backend/tests/: conftest.py
stellar-studio/backend/tests/mocks/: db.py  minio.py  redis.py
stellar-studio/backend/tests/repositories/: test_filter_repository.py  test_observation_repository.py  test_preset_filter_repository.py  test_preset_repository.py  test_processing_repository.py  test_target_file_repository.py  test_target_preset_repository.py  test_target_repository.py  test_task_repository.py  test_telescope_repository.py  test_user_repository.py  test_workflow_repository.py
stellar-studio/backend/tests/services/: test_telescope_service.py
(+140 files in other folders)
