# backend/pyproject.toml
[tool.poetry]
package-mode = false
name = "stellar-studio"
version = "0.1.0"
description = "Astrophotography Processing Platform"
authors = ["Noziop <contact@fassih.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
numpy = "^1.24.0"
astroquery = "^0.4.7"
celery = "^5.3.6"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
mysqlclient = "^2.2.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.0.0"
astropy = "^5.3.2"
prometheus-fastapi-instrumentator = "^6.1.0"