[project]
name = "stellar-studio"
version = "0.1.0"
description = "Astrophotography Processing Platform"
authors = [
    {name = "Noziop", email = "contact@fassih.ch"}
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
numpy = "^1.24.0"
astroquery = "^0.4.7"
celery = "^5.3.6"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
mysqlclient = "^2.2.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
pydantic-settings = "^2.0.0"
astropy = "^5.3.2"
prometheus-fastapi-instrumentator = "^6.1.0"
alembic = "^1.14.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
minio = "^7.1.14"
scikit-image = "^0.21.0"
scipy = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
