[tool.poetry]
name = "stellar-studio"
version = "0.1.0"
description = "Astrophotography Processing Platform"
authors = ["Noziop <contact@fassih.ch>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
numpy = "^1.24.0"
astroquery = "^0.4.7"
celery = "^5.3.6"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
pydantic = {extras = ["email"], version = "^2.10.4"}
pydantic-settings = "^2.0.0"
astropy = "^5.3.2"
prometheus-fastapi-instrumentator = "*"
alembic = "^1.14.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
minio = "^7.1.14"
scikit-image = "^0.21.0"
scipy = "^1.11.0"
python-dotenv = "^1.0.0"
kombu = "^5.3.5"
aiomysql = "^0.2.0"
mysql-connector-python = "^8.0.0"
websockets = "^11.0.0"  # Pour le support WebSocket
aioredis = "^2.0.0"    # Pour la gestion des connexions WebSocket via Redis
Pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"
httpx = "^0.24.1"  # Pour les tests d'API
faker = "^19.3.0"  # Pour générer des données de test


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
